# luki

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
config/: base.yaml
scripts/: demo_similarity_search.py
src/luki/app/: __init__.py  __main__.py  main.py  services.py
src/luki/embeddings/: __init__.py  __main__.py  dataset.py  model.py  pipeline.py  store.py
src/luki/etl/: __init__.py  discover.py  extract.py  path_parser.py  pipeline.py
tests/: test_embeddings_model.py  test_embeddings_store.py  test_path_parser.py
